--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "bcryptjs": "^3.0.2",
     "bullmq": "^5.61.0",
     "exifr": "^7.1.3",
+    "jszip": "^3.10.1",
     "ioredis": "^5.8.1",
     "next": "15.5.5",
     "next-auth": "^4.24.11",
